...
                                <rect key="frame" x="310" y="602" width="50" height="50"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="das-aq-7V8"/>
                                    <constraint firstAttribute="width" constant="50" id="mcd-mO-tYN"/>
                                </constraints>
                                <state key="normal" image="plus">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="25"/>
                                    </userDefinedRuntimeAttribute>
...
                                                    <action selector="btnAddPosterPressed:" destination="XUg-iV-pAO" eventType="touchUpInside" id="Mie-0D-hI8"/>
                                                </connections>
                                            </button>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ow7-2P-shC">
                                                <rect key="frame" x="44" y="244.5" width="287" height="60"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hva-nE-pkF">
                                                        <rect key="frame" x="0.0" y="0.0" width="71.5" height="14.5"/>
                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U68-0z-Lby">
...
                                                    <constraint firstAttribute="bottom" secondItem="9p8-fu-qme" secondAttribute="bottom" constant="4.5" id="yh2-Kj-xuB"/>
                                                </constraints>
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HkS-j7-cHF">
                                                <rect key="frame" x="44" y="394.5" width="287" height="150"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQq-67-naA">
                                                        <rect key="frame" x="0.0" y="0.0" width="54" height="14.5"/>
                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zmk-NH-icu">
...
                                                <rect key="frame" x="55" y="597" width="265" height="50"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="8oZ-Ek-vfe"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                <state key="normal" title="Add">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="5"/>
                                                    </userDefinedRuntimeAttribute>
...
                                                <rect key="frame" x="8" y="30" width="80" height="35"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="35" id="F4M-c4-Dz6"/>
                                                    <constraint firstAttribute="width" constant="80" id="nDZ-FQ-FpH"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                <state key="normal" title="Cancel">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="btnCancelPressed:" destination="XUg-iV-pAO" eventType="touchUpInside" id="mQJ-Ov-FxJ"/>
                                                </connections>
                                            </button>
...
