...
    func numberOfSections(in tableView: UITableView) -> Int {
        return self.viewModel.numberOfRowsForUserAddedMovies > 0 ? 2 : 1
    }
    
    func tableView(_ tableView: UITableView, titleForHeaderInSection section: Int) -> String? {
        if self.viewModel.isCellForMyMoviesSection(indexPath: IndexPath(row: 0, section: section)){
            return "My Movies"
        }
        return "Movies"
    }
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        
        if self.viewModel.shouldShowLoadingRow(indexPath: indexPath) {
...
